[package]
name = "oru-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = {version="0.51.3", features=["tokio", "tcp", "identify", "noise", "yamux", "relay", "dcutr", "rendezvous", "macros"]}
libp2p-identity = {version="0.1.2", features=["ed25519"]}
tokio = {version="1.28.2", features=["full"]}
